# Cadmium-Cloud

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  dev.yml  docker-compose.yml  get_code.sh  haproxy.cfg  mongod.conf  nginx.conf  output.txt  post.lua  project_code.txt
src/: config.rs  lib.rs  logger.rs  main.rs
src/db/: mod.rs
src/graphql/: mutation.rs  query.rs  schema.rs
src/handlers/: application_handler.rs  forget_password_handler.rs  log_handler.rs  mod.rs  organization_handler.rs  signin_handler.rs  test_handler.rs  user_handler.rs  websocket_handler.rs
src/middleware/: auth_middleware.rs
src/middlewares/: auth_middleware.rs
src/models/: application.rs  log.rs  mod.rs  organization.rs  otp.rs  user.rs
src/routes/: applications.rs  health.rs  logs.rs  mod.rs  organizations.rs  test.rs  users.rs  websocket.rs
src/services/: email_service.rs  jwt_service.rs  log_service.rs  mod.rs  otp_service.rs  websocket_queue.rs
src/templates/: otp_template.html
src/websocket/: connection.rs  server.rs
