[package]
name = "cadmium-cloud"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mongodb = { version = "2.0", features = ["tokio-runtime"] }
dotenv = "0.15"
log = "0.4"
env_logger = "0.10"
tokio = { version = "1", features = ["full"] }
